add example (DOMContentLoaded) to on_load.html

--- a/html/on_load.html
+++ b/html/on_load.html
@@ -192,8 +192,9 @@ Note URL, not url!! </pre><!-- wide-view -->
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
-INSERT CODE
-              </pre><!-- code-content -->
+window.addEventListener("DOMContentLoaded",
+  (event) => console.log(event.target.URL)
+) </pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -201,11 +202,9 @@ INSERT CODE
           <details open><!--Details CONSOLE -->
             <summary class="details-console-summary">[JavaScript Inserts]</summary>
             <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-              </pre><!-- small-view -->
+http://127.0.0.1:5500/expt.html </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-              </pre><!-- wide-view -->
+http://127.0.0.1:5500/expt.html </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
         </article>
 
